# Python-SDK-to-MCP-Converter

./: .gitignore  agent_demo.py  autodiscover.py  cli.py  executor.py  loader.py  mcp_server.py  pyproject.toml  registry.py
config/: github.yaml
