[project]
name = "python-sdk-to-mcp-converter"
version = "0.1.0"
description = ""
authors = [
    {name = "Aneesh Naresh",email = "aneesh.naresh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "openai (>=1.102.0,<2.0.0)",
    "pygithub (>=2.7.0,<3.0.0)",
    "mcp (>=1.13.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
